# LemmaForge

./: .gitignore  AGENTS.md  InitialPrompt.md  README.md  lemmaforge_milestone_roadmap_for_codex.md  package-lock.json  package.json  pyproject.toml
.codex/skills/research-import/: SKILL.md  research_patch.schema.json
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: agent.py  topics.py  (+8 more)
backend/tests/: conftest.py  test_ai_import.py  test_cli.py  test_context_pack_ai.py  test_import_batches.py  test_import_commit.py  test_problems.py  test_relation_migration.py  test_research_patch.py  test_topic_graph.py  test_zotero_local.py
cli/research_cli/: __init__.py  main.py
docs/: baseline_audit.md  codex_handoff.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  styles.css
references/: references.bib
schemas/: context_pack_suggestion.schema.json  problem_summary.schema.json  research_patch.schema.json
vault/context_packs/: ctx_q_canonical_extension_ai_context.md  ctx_q_canonical_extension_ai_context_2.md  ctx_q_canonical_extension_ai_context_3.md
vault/fragments/: ambient_q_category_notation.md  closure_inside_presheaves_construction.md  compactness_analogue_question.md  context_note_example.md  context_untitled_fragment.md  initiality_of_closure_canonical_extension.md  possible_phi_canonical_extension_refinement.md  prop_reject_example.md  q_canonical_extension_definition.md  reflection_of_existing_weighted_limits_colimits.md
(+88 files in other folders)
