[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemmaforge"
version = "0.1.0"
description = "Local-first mathematical research fragment system."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "pydantic>=2.7",
  "python-frontmatter>=1.1",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5"
]

[project.scripts]
research = "research_cli.main:app"

[tool.setuptools]
package-dir = {"" = "backend", "research_cli" = "cli/research_cli"}

[tool.setuptools.packages.find]
where = ["backend", "cli"]
include = ["app*", "research_cli*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

